--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
